--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "pinia": "^2.1.7",
     "vite-svg-loader": "^5.1.0",
     "vue": "^3.4.29",
+    "vue-loading-overlay": "^6.0.4",
     "vue-router": "^4.3.3"
   },
   "devDependencies": {
